--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,8 +47,8 @@ development_status:
   epic-0-retrospective: optional
 
   # Epic 1: 框架基础与核心认证
-  epic-1: backlog
-  1-1-config-validation-startup-check: backlog
+  epic-1: in-progress
+  1-1-config-validation-startup-check: done
   1-2-config-validation-startup-check: backlog
   1-3-enable-security-boot-annotation: backlog
   1-4-username-password-authentication: backlog
