--- a/security-core/pom.xml
+++ b/security-core/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>spring-security-core</artifactId>
         </dependency>
 
+        <!-- ========== Servlet API ========== -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- ========== Validation ========== -->
         <dependency>
             <groupId>javax.validation</groupId>
@@ -80,6 +87,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
