--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -49,7 +49,7 @@ development_status:
   # Epic 1: 框架基础与核心认证
   epic-1: in-progress
   1-1-config-validation-startup-check: done
-  1-3-enable-security-boot-annotation: dev-complete
+  1-3-enable-security-boot-annotation: done
   1-4-username-password-authentication: backlog
   1-5-jwt-authentication-plugin: backlog
   1-6-default-authentication-endpoints: backlog
